fix cube component sticky issue with padding and fix alignment issue with job headers

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   --main-bright: rgb(150, 255, 108);
   --main-light: rgb(240, 254, 234);
   --main-dark: rgba(21, 36, 15, 0.2);
-  --cube: rgba(207, 253, 189, 0.9);
+  --cube: rgba(207, 253, 189, 0.95);
 
   --hamburger: 0.5s;
   --info: 0.7s;
